move jlink task to pom