@@ -35,6 +35,7 @@
 		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
 		<build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
 		<launch4j-maven-plugin.version>2.4.1</launch4j-maven-plugin.version>
+		<exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
 
 	</properties>
 
@@ -75,7 +76,39 @@
 						link to' -->
 					<linkXRef>false</linkXRef>
 				</configuration>
-			</plugin>			
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${exec-maven-plugin.version}</version>
+				<configuration>
+					<longModulepath>false</longModulepath>
+				</configuration>
+				<executions>
+					<execution>
+						<id>jlink</id>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<executable>${java.home}/bin/jlink</executable>
+							<arguments>
+								<argument>--module-path</argument>
+								<argument>${project.build.directory}/*.jar</argument>
+								<argument>--add-modules</argument>
+								<argument>javafx.controls,javafx.swing</argument>
+								<argument>--output</argument>
+								<argument>${project.build.directory}/jre21</argument>
+								<argument>--no-header-files</argument>
+								<argument>--no-man-pages</argument>
+								<argument>--vm=server</argument>
+							</arguments>
+							<workingDirectory>../</workingDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -104,13 +137,13 @@
 					</execution>
 					<!-- zip -->
 					<execution>
-						<phase>package</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
 						<configuration>
 							<finalName>${project.artifactId}_${project.version}_${platform.suffix}</finalName>
-							<!--<appendAssemblyId>false</appendAssemblyId>-->
+							<appendAssemblyId>false</appendAssemblyId>
 							<descriptors>
 								<descriptor>${zip.content}</descriptor>
 							</descriptors>
